--- a/project_film/src/App.css
+++ b/project_film/src/App.css
@@ -7,6 +7,63 @@ body, .search-bar {
 body {
 	background: #f1f1f1;
 }
+ul {
+  list-style-type: none; /* Remove bullets */
+  padding: 0; /* Remove padding */
+  margin: 0;
+}
+.paginate-container {
+  margin-top: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.paginate {
+  display: flex; /* Mengatur elemen-elemen pagination sejajar secara horizontal */
+  list-style: none;
+  padding: 0;
+}
+
+.paginate .page-item {
+  margin-top: 10px;
+  margin-right: 5px; /* Mengatur jarak antara elemen-elemen pagination */
+}
+
+.paginate .page-link {
+  display: inline-block;
+  padding: 6px 12px;
+  background-color: #ffffff;
+  border: 1px solid #dee2e6;
+  color: #0d6efd;
+  text-decoration: none;
+  border-radius: 4px;
+  transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out;
+}
+.paginate .page-link:hover {
+  background-color: #ffeba7;
+}
+
+.paginate .page-item.active .page-link {
+  background-color: #0d6efd;
+  color: #ffeba7;
+  border-color: #0d6efd;
+}
+.paginate .page-item.disabled .page-link {
+  color: #6c757d;
+  pointer-events: none;
+  background-color: #ffffff;
+  border-color: #dee2e6;
+}
+.previous {
+  padding: 2px;
+  padding-top: 10px;
+  display: inline-block;
+}
+.next {
+  padding: 2px;
+  padding-top: 10px;
+  display: inline-block;
+}
 .container-category {
   position: absolute;
   float: left;
@@ -158,9 +215,8 @@ a {
   font-weight: 500;
   font-size: 15px;
   border-radius: 2px;
-  padding: 5px 0;
-  padding-left: 20px;
-  padding-right: 15px;
+  
+  padding: 6px 12px;
   margin: 2px 0;
   text-align: left;
   text-decoration: none;
